check for ionos system before running a quirk

--- a/playbooks/roles/setup/tasks/base.yaml
+++ b/playbooks/roles/setup/tasks/base.yaml
@@ -6,6 +6,7 @@
     mode: "0700"
 
 - name: "Ionos: de-activate password + root login"
+  when: ansible_facts.system_vendor == 'QEMU'
   ansible.builtin.shell:
     cmd: |
       set -euf
