--- a/playbooks/roles/info_tor/tasks/log-err.yaml
+++ b/playbooks/roles/info_tor/tasks/log-err.yaml
@@ -8,6 +8,6 @@
   failed_when: _result.stderr_lines | length > 0
 
 - name: Results of error log check
-  ansible.builtin.debug:
-    msg: "{{ _result.stdout.split('\n') }}"
   when: _result.stdout_lines | length > 0
+  ansible.builtin.debug:
+    var: _result.stdout_lines
