--- a/playbooks/roles/info_snowflake/tasks/log-proxy.yaml
+++ b/playbooks/roles/info_snowflake/tasks/log-proxy.yaml
@@ -9,6 +9,6 @@
   failed_when: _result.stderr_lines | length > 0
 
 - name: Results of log-proxy since {{ log_proxy_since }}
-  ansible.builtin.debug:
-    msg: "{{ _result.stdout.split('\n') }}"
   when: _result.stdout_lines | length > 0
+  ansible.builtin.debug:
+    var: _result.stdout_lines
