--- a/playbooks/roles/info_tor/tasks/log-warn.yaml
+++ b/playbooks/roles/info_tor/tasks/log-warn.yaml
@@ -7,6 +7,6 @@
   register: _result
 
 - name: Results of log-warn {{ log_lines }} last lines
-  ansible.builtin.debug:
-    msg: "{{ _result.stdout.split('\n') }}"
   when: _result.stdout_lines | length > 0
+  ansible.builtin.debug:
+    var: _result.stdout_lines
