fix remaining metrics quirks

--- a/playbooks/roles/setup/defaults/main.yaml
+++ b/playbooks/roles/setup/defaults/main.yaml
@@ -14,3 +14,6 @@ prometheus_server: ""
 
 # certificates and more
 ssl_dir: "{{ playbook_dir }}/../secrets/ssl"
+
+tor_metrics: false
+snowflake_metrics: false
