--- a/playbooks/roles/setup_tor/defaults/main.yaml
+++ b/playbooks/roles/setup_tor/defaults/main.yaml
@@ -11,3 +11,5 @@ tor_debian_target: "" # if ansible_facts.distribution_release is not wanted but 
 metrics_port: ""
 
 nickname: ""
+
+publish_server_descriptor: "{{ bridge_distribution | length > 0 | ternary('bridge', '')}}"
