--- a/playbooks/roles/setup_tor/defaults/main.yaml
+++ b/playbooks/roles/setup_tor/defaults/main.yaml
@@ -6,8 +6,8 @@ tor_build_from_source: true
 tor_git_version: "HEAD"
 tor_patches: []
 
-tor_debian_target: "" # if ansible_facts.distribution_release is not wanted but instead e.g. "tor-nightly-main-bookworm"
+tor_debian_target: "" # e.g. "tor-nightly-main-bookworm", default is ansible_facts.distribution_release
 
 nickname: ""
 
-publish_server_descriptor: "{{ bridge_distribution | length > 0 | ternary('bridge', '')}}"
+publish_server_descriptor: "{{ (bridge_distribution | length > 0) | ternary('bridge', '')}}"
