use attribute name instead alias

--- a/playbooks/roles/setup_tor/tasks/tor-debian.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-debian.yaml
@@ -55,7 +55,7 @@
       ansible.builtin.blockinfile:
         create: true
         dest: /etc/systemd/system/tor@default.service.d/override.conf
-        content: |
+        block: |
           [Service]
           NoNewPrivileges=no
       notify: "restart Tor"
