--- a/playbooks/roles/setup/tasks/ipv6-hetzner.yaml
+++ b/playbooks/roles/setup/tasks/ipv6-hetzner.yaml
@@ -35,7 +35,8 @@
 - name: Gather facts again
   when: _cloud_init.changed
   ansible.builtin.setup:
-    gather_subset: "{{ facts_subset }}"
+    gather_subset:
+      - "default_ipv6"
 
 - name: Bail out
   when: ansible_facts.default_ipv6.address is match('fe80::')
