--- a/playbooks/roles/setup/tasks/kernel-src.yaml
+++ b/playbooks/roles/setup/tasks/kernel-src.yaml
@@ -88,7 +88,7 @@
     cmd: |
       set -euf
 
-      yes '' | make localmodconfig 1>>make.log
+      yes '' | make oldconfig 1>>make.log
 
       make -j {{ 1 + (ansible_facts.memtotal_mb / 2048) | int }} 1>>make.log
       ln -snf $PWD /usr/src/linux
