--- a/playbooks/roles/setup/tasks/ipv6-hetzner.yaml
+++ b/playbooks/roles/setup/tasks/ipv6-hetzner.yaml
@@ -13,6 +13,11 @@
     dest: /etc/network/interfaces.d/50-cloud-init
   register: _cloud_init
 
+- name: Deactivate the Hetzner network configurator
+  ansible.builtin.copy:
+    src: 00_debian.cfg
+    dest: /etc/cloud/cloud.cfg.d/
+
 - name: Restart network service
   ansible.builtin.systemd:
     name: "networking"
@@ -21,26 +26,23 @@
     enabled: true
   when: _cloud_init.changed
 
-- name: Deactivate the Hetzner network configurator
-  ansible.builtin.copy:
-    src: 00_debian.cfg
-    dest: /etc/cloud/cloud.cfg.d/
-
 - name: Check that ipv6 is up again
   changed_when: false
-  ansible.builtin.command: ip -6 a
-  register: _result
-  failed_when: _result.stderr_lines | length > 0
+  ansible.builtin.shell:
+    cmd: |
+      while ip -6 a | grep -q ' tentative'; do
+        sleep 1
+      done
 
 - name: Gather ipv6 facts
   when: _cloud_init.changed
   ansible.builtin.setup:
     gather_subset:
-      - "all_ipv6_addresses"
       - "default_ipv6"
 
-- name: Bail out
-  when: ansible_facts.default_ipv6.address is match('fe80::')
-  failed_when: ansible_facts.default_ipv6.address is match('fe80::')
+- name: Bail out if default ipv6 is link-local or default
+  when: ansible_facts.default_ipv6.address is match('fe80::') or ansible_facts.default_ipv6.address is search('::1$')
+  failed_when: true
   ansible.builtin.debug:
     var: ansible_facts.default_ipv6
+    verbosity: 1
