speed up git clone

--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -68,7 +68,7 @@
       tags:
         - firewall
 
-    - name: Ensure that an updated kernel is in place
+    - name: Ensure that an updated kernel is booted
       ansible.builtin.meta: flush_handlers
 
     - name: Kernel source
