--- a/playbooks/roles/setup/tasks/kernel-src.yaml
+++ b/playbooks/roles/setup/tasks/kernel-src.yaml
@@ -22,6 +22,8 @@
     dest: /root/linux
     version: "{{ kernel_git_version }}"
     force: true
+    depth: 1
+    single_branch: true
   register: _repo_linux
 
 - name: Apply patches for Linux
@@ -69,7 +71,7 @@
         -e 's,^# CONFIG_NF_NAT .*,CONFIG_NF_NAT=m,' \
         -e 's,^# CONFIG_NFT_NAT .*,CONFIG_NFT_NAT=m,' \
         -e 's,^# CONFIG_NF_CT_NETLINK .*,CONFIG_NF_CT_NETLINK=m,' \
-        .config || true
+        .config
       yes '' | make oldconfig 1>>make.log
 
       after=$(md5sum .config)
