--- a/playbooks/roles/setup/tasks/reboot-or-restart.yaml
+++ b/playbooks/roles/setup/tasks/reboot-or-restart.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Check if reboot is required
+- name: Check if a reboot is required file does exist
   changed_when: _reboot_required.stat.exists
   ansible.builtin.stat:
     path: /var/run/reboot-required
