--- a/playbooks/roles/setup_tor/tasks/lyrebird.yaml
+++ b/playbooks/roles/setup_tor/tasks/lyrebird.yaml
@@ -6,6 +6,8 @@
     dest: /root/lyrebird
     version: "{{ lyrebird_git_version }}"
     force: true
+    depth: 1
+    single_branch: true
   register: _repo_lyrebird
 
 - name: Apply patches for Lyrebird
