--- a/playbooks/roles/setup_tor/tasks/tor-src.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-src.yaml
@@ -16,6 +16,8 @@
     dest: /root/tor
     version: "{{ tor_git_version }}"
     force: true
+    depth: 1
+    single_branch: true
   register: _repo_tor
 
 - name: Apply patches for Tor
