switch gathering to "smart"

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,7 +6,10 @@ order = shuffled
 pipelining = True
 strategy = free
 
-gathering = implicit
+# timer stats (debug/profiling)
+# callbacks_enabled=ansible.posix.profile_tasks
+
+gathering = smart
 inject_facts_as_vars = false
 # keep it readable
 fact_caching = jsonfile
@@ -15,10 +18,10 @@ fact_caching_connection = ./.ansible_facts
 # reduce noise
 display_skipped_hosts = false
 
-# would clash with search pattern of grep
+# would clash with a grep call
 no_target_syslog = True
 
 remote_user = root
 
-# compression is discouraged from security perspective
+# compression is discouraged under security aspects
 ssh_args = -o Compression=no -o StrictHostKeyChecking=on
