refactor tor_config_local into a multi-line string

--- a/playbooks/roles/setup_tor/defaults/main.yaml
+++ b/playbooks/roles/setup_tor/defaults/main.yaml
@@ -12,4 +12,4 @@ nickname: ""
 
 publish_server_descriptor: "{{ (bridge_distribution | length > 0) | ternary('bridge', '')}}"
 
-tor_config_local: []
+tor_config_local: ""
