add connlimit to firewall rules

--- a/playbooks/roles/setup_tor/tasks/firewall.yaml
+++ b/playbooks/roles/setup_tor/tasks/firewall.yaml
@@ -2,24 +2,21 @@
 - name: DDoS of obfs4 port
   vars:
     _max: "{{ (bridge_distribution | length > 0) | ternary(9,3) }}"
-    _ipv4_cmd: "INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --dport {{ tor_port }} --syn -m hashlimit --hashlimit-mode srcip,dstport --hashlimit-srcmask 32 --hashlimit-name tor-ddos --hashlimit-above {{ _max }}/minute --hashlimit-burst 1 --hashlimit-htable-expire {{ 2 * 60 * 1000 }} -j DROP"
-    _ipv6_cmd: "INPUT -p tcp --dst {{ ansible_facts.default_ipv6.address }} --dport {{ tor_port }} --syn -m hashlimit --hashlimit-mode srcip,dstport --hashlimit-srcmask 80 --hashlimit-name tor-ddos6 --hashlimit-above {{ _max }}/minute --hashlimit-burst 1 --hashlimit-htable-expire {{ 2 * 60 * 1000 }} -j DROP"
+  changed_when: _ddos_obfs4_rules.stdout_lines | length > 0
   ansible.builtin.shell:
     cmd: |
       set -euf
 
-      if ! iptables -C {{ _ipv4_cmd }} 2>/dev/null; then
-        iptables -A {{ _ipv4_cmd }}
-        echo "added v4 rule"
-      fi
-
-      if ! ip6tables -C {{ _ipv6_cmd }} 2>/dev/null; then
-        ip6tables -A {{ _ipv6_cmd }}
-        echo "added v6 rule"
+      if ! {{ item | regex_replace(' --xxx ', ' -C ') }} 2>/dev/null; then
+        {{ item | regex_replace(' --xxx ', ' -v -A ') }}
       fi
     executable: /bin/bash
   register: _ddos_obfs4_rules
-  changed_when: _ddos_obfs4_rules.stdout_lines | length > 0
+  with_items:
+    - "iptables  --xxx INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --dport {{ tor_port }} --syn -m hashlimit --hashlimit-mode srcip,dstport --hashlimit-srcmask 32 --hashlimit-name tor-ddos  --hashlimit-above {{ _max }}/minute --hashlimit-burst 1 --hashlimit-htable-expire {{ 2 * 60 * 1000 }} -j DROP"
+    - "ip6tables --xxx INPUT -p tcp --dst {{ ansible_facts.default_ipv6.address }} --dport {{ tor_port }} --syn -m hashlimit --hashlimit-mode srcip,dstport --hashlimit-srcmask 80 --hashlimit-name tor-ddos6 --hashlimit-above {{ _max }}/minute --hashlimit-burst 1 --hashlimit-htable-expire {{ 2 * 60 * 1000 }} -j DROP"
+    - "iptables  --xxx INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --dport {{ tor_port }} --syn -m connlimit --connlimit-mask 32 --connlimit-above {{ _max }} -j DROP"
+    - "ip6tables --xxx INPUT -p tcp --dst {{ ansible_facts.default_ipv6.address }} --dport {{ tor_port }} --syn -m connlimit --connlimit-mask 80 --connlimit-above {{ _max }} -j DROP"
 
 - name: ACCEPT TCP to obfs4 port
   ansible.builtin.iptables:
