--- a/playbooks/roles/info_snowflake/tasks/version.yaml
+++ b/playbooks/roles/info_snowflake/tasks/version.yaml
@@ -13,6 +13,6 @@
   throttle: 1
   ansible.builtin.lineinfile:
     create: yes
-    line: "{{ inventory_hostname }} {{ _proxy_version.stdout_lines[0] }}"
+    line: "{{ inventory_hostname }} snowflake {{ _proxy_version.stdout_lines[0] }}"
     path: "{{ tmp_dir }}/snowflake_version"
     regex: "^{{ inventory_hostname }} "
