--- a/playbooks/roles/setup/defaults/main.yaml
+++ b/playbooks/roles/setup/defaults/main.yaml
@@ -17,3 +17,6 @@ ssl_dir: "{{ playbook_dir }}/../secrets/ssl"
 
 # to delete outdated additional rules
 firewall_force_reset: false
+
+# apt timer schedules, reboot (for deferred service) is made via cron in the following hour
+timer_hour: "{{ 12 | random(seed=inventory_hostname) }}"
