--- a/playbooks/roles/setup_snowflake/defaults/main.yaml
+++ b/playbooks/roles/setup_snowflake/defaults/main.yaml
@@ -3,4 +3,4 @@ snowflake_build_from_source: true
 snowflake_git_version: "HEAD"
 snowflake_patches: []
 
-snowflake_command_args: "-verbose"
+snowflake_command_args: ""
