--- a/playbooks/roles/setup/tasks/auto-update-debian.yaml
+++ b/playbooks/roles/setup/tasks/auto-update-debian.yaml
@@ -51,8 +51,4 @@
     name: "Reboot if services can't be safely restarted"
     minute: "42"
     hour: "{{ 1 + timer_hour | int }}"
-    job: >-
-      if needrestart -r l -b | grep -q 'NEEDRESTART-SVC:'; then
-      pgrep -af 'sshd:' | grep -q -v '/usr/sbin/sshd' || /usr/sbin/reboot;
-      fi
-    user: root
+    job: "if needrestart -r l -b | grep -q 'NEEDRESTART-SVC:' && ! pgrep -af 'sshd:' | grep -q -v '/usr/sbin/sshd'; then reboot; fi"
