--- a/playbooks/roles/setup/tasks/auto-update-debian.yaml
+++ b/playbooks/roles/setup/tasks/auto-update-debian.yaml
@@ -51,4 +51,4 @@
     name: "Reboot if services can't be safely restarted"
     minute: "42"
     hour: "{{ 1 + timer_hour | int }}"
-    job: "if needrestart -r l -b | grep -q 'NEEDRESTART-SVC:' && ! pgrep -af 'sshd:' | grep -q -v '/usr/sbin/sshd'; then reboot; fi"
+    job: "if needrestart -r l -b | grep -q 'NEEDRESTART-SVC:'; then reboot; fi"
