fix typo in cron job + reduce + of cron jobs

--- a/playbooks/roles/setup_tor/tasks/firewall-server.yaml
+++ b/playbooks/roles/setup_tor/tasks/firewall-server.yaml
@@ -9,47 +9,42 @@
     - ipv4-rules.sh
     - ipv6-rules.sh
 
-- name: Install or update ipset
+- name: Install or update software for Tor server firewall
   ansible.builtin.apt:
     name:
       - ipset
       - jq
 
-- name: Define additional remote services
-  ansible.builtin.set_fact:
-    _add_remote_service: "{{ ((metrics_port | length > 0) and (prometheus_server | length > 0)) | ternary ('ADD_REMOTE_SERVICES=' + prometheus_server + ':' + metrics_port, '') }}"
-
 - name: Start firewall scripts
+  # explicit specify the relay because torrc might not yet been configured at this point
+  vars:
+    _add_remote_service: "{{ ((metrics_port | length > 0) and (prometheus_server | length > 0)) | ternary ('ADD_REMOTE_SERVICES=' + prometheus_server + ':' + metrics_port, '') }}"
   ansible.builtin.shell:
     cmd: |
       set -euf
 
-      {{ _add_remote_service }} CONFIGURED_RELAYS={{ ansible_facts.default_ipv4.address }}:{{ tor_port }} ./ipv4-rules.sh start
-      CONFIGURED_RELAYS6=[{{ ansible_facts.default_ipv6.address }}]:{{ tor_port }} ./ipv6-rules.sh start
+      CONFIGURED_RELAYS={{ ansible_facts.default_ipv4.address }}:{{ tor_port }}    {{ _add_remote_service }} ./ipv4-rules.sh start
+      CONFIGURED_RELAYS6=[{{ ansible_facts.default_ipv6.address }}]:{{ tor_port }}                           ./ipv6-rules.sh start
     chdir: /root
     executable: /bin/bash
 
-- name: Cron job to start after reboot for IPv4
-  vars:
+- name: Cron job to start firewall after reboot
   ansible.builtin.cron:
-    name: "start IPv4 firewall"
+    name: "start firewall"
     special_time: reboot
-    job: "{{ _add_remote_service }} /root/ipv4-rules.sh start"
+    job: "/root/ipv4-rules.sh start; /root/ipv6-rules.sh start"
 
-- name: Cron job to start after reboot for IPv6
+- name: Cron job to save ipsets
   ansible.builtin.cron:
-    name: "start IPv6 firewall"
-    special_time: reboot
-    job: "/root/ipv6-rules.sh start"
-
-- name: Cron job to save ipsets for IP{{ item }}
-  ansible.builtin.cron:
-    name: "save IP{{ item }} ipset"
+    name: "save ipset"
     special_time: hourly
-    job: "/root/ipv{{ item }}-rules.sh save"
-  with_items:
-    - "v4"
-    - "v6"
+    job: "/root/ipv4-rules.sh save; /root/ipv6-rules.sh save"
+
+- name: De-activate netfilter persistent service
+  ansible.builtin.service:
+    name: netfilter-persistent
+    enabled: false
+    state: stopped
 
 - name: Remove iptables state of Tor server for IP{{ item }}
   ansible.builtin.file:
