polish calls of ansible.builtin.service

--- a/playbooks/roles/info_snowflake/tasks/uptime.yaml
+++ b/playbooks/roles/info_snowflake/tasks/uptime.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Get service status
-  ansible.builtin.systemd:
+  ansible.builtin.service:
     name: snowflake-proxy
   register: _service
 
