--- a/playbooks/roles/setup_tor/tasks/tools-src.yaml
+++ b/playbooks/roles/setup_tor/tasks/tools-src.yaml
@@ -16,7 +16,7 @@
     filename: "backports"
     repo: "deb http://deb.debian.org/debian {{ ansible_facts.distribution_release }}-backports main"
 
-- name: Install or update Go for Tor
+- name: Install or update Go for Tor proxy
   when: not ansible_check_mode
   ansible.builtin.apt:
     default_release: "{{ ansible_facts.distribution_release }}-backports"
