--- a/playbooks/roles/setup/handlers/main.yaml
+++ b/playbooks/roles/setup/handlers/main.yaml
@@ -14,14 +14,10 @@
   ansible.builtin.service:
     name: nginx
     state: restarted
-    daemon_reload: true
-    enabled: true
 
 - name: Restart Prometheus node exporter
   when: not ansible_check_mode
   listen: "restart Prometheus node exporter"
-  ansible.builtin.systemd:
-    name: "prometheus-node-exporter"
+  ansible.builtin.service:
+    name: prometheus-node-exporter
     state: restarted
-    daemon_reload: true
-    enabled: true
