--- a/playbooks/roles/setup_snowflake/tasks/main.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/main.yaml
@@ -15,6 +15,9 @@
       owner: root
       group: root
       mode: "0755"
+    ansible.builtin.service:
+      daemon_reload: true
+      enabled: true
   block:
     - name: Firewall
       ansible.builtin.import_tasks: firewall.yaml
@@ -46,11 +49,8 @@
             - config
 
     - name: Ensure that Snowflake is started
-      when: not ansible_check_mode
       ansible.builtin.service:
         name: snowflake-proxy
         state: started
-        daemon_reload: true
-        enabled: true
       tags:
         - snowflake
