gather fact only

--- a/playbooks/roles/info_snowflake/tasks/uptime.yaml
+++ b/playbooks/roles/info_snowflake/tasks/uptime.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Get service status
-  ansible.builtin.service:
+  ansible.builtin.service_facts:
     name: snowflake-proxy
   register: _service
 
