--- a/playbooks/roles/info_tor/tasks/uptime.yaml
+++ b/playbooks/roles/info_tor/tasks/uptime.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Get Service Status
-  ansible.builtin.service_facts:
+  ansible.builtin.systemd:
     name: tor
   register: _service
 
